UPDATE - starting on score tables

--- a/scores.html
+++ b/scores.html
@@ -1,9 +1,49 @@
+<!DOCTYPE html>
 <html>
     <head>
-
+        <style>
+            table, th, td {
+                border: solid;
+                border-collapse: collapse;
+                text-align: center;
+            }
+        </style>
     </head>
 
     <body>
         This page will be the starting page where scores will be displayed for your desired team.
+
+        <br><br>
+
+        <div class="scoreBox">
+            Team 1 Vs Team 2
+            <table>
+                <tr>
+                    <th> Team </th>
+                    <th> Q1 </th>
+                    <th> Q2 </th>
+                    <th> Q3 </th>
+                    <th> Q4 </th>
+                    <th> T </th>
+                </tr>
+                <tr>
+                    <td> Team 1 </td>
+                    <td> Q1 </td>
+                    <td> Q2 </td>
+                    <td> Q3 </td>
+                    <td> Q4 </td>
+                    <td> Total </td>
+                </tr>
+                <tr>
+                    <td> Team 2 </td>
+                    <td> Q1 </td>
+                    <td> Q2 </td>
+                    <td> Q3 </td>
+                    <td> Q4 </td>
+                    <td> Total </td>
+                </tr>
+            </table>
+        </div>
+        
     </body>
 </html>
